tools/tests/errors/surf_parse_16.ki
# PARSER: a trailing binary operator with no right-hand operand
var x = 3 *